--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -7,6 +7,17 @@
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+@article{schindler2017me,
+	author = {Schindler, Ines and Hosoya, Georg and Menninghaus, Winfried and Beermann, Ursula and Wagner, Valentin and Eid, Michael and Scherer, Klaus R},
+	date-added = {2023-09-12 09:22:21 +0100},
+	date-modified = {2023-09-12 09:22:21 +0100},
+	journal = {PloS One},
+	number = {6},
+	pages = {e0178899},
+	publisher = {Public Library of Science San Francisco, CA USA},
+	title = {Measuring aesthetic emotions: A review of the literature and a new assessment tool},
+	volume = {12},
+	year = {2017}}
 
 @inproceedings{santana2020,
 	author = {Santana, Igor Andr{\'e} Pegoraro and Pinhelli, Fabio and Donini, Juliano and Catharin, Leonardo and Mangolin, Rafael Biazus and Feltrim, Val{\'e}ria Delisandra and Domingues, Marcos Aur{\'e}lio and others},
